    armv6m soft-float on the armhf build host)
  * reorganize flags and cmake options around stages for the toolchain build
  * set baseline arch to armv5t, remove older 3.8 workaround for armel build
  * update to debian host triple for the armhf build

  [ Jordan Justen ]
  * d/rules: Add amdgcn-mesa-mesa3d to libclc build.
    Closes: #993904, #995069

 -- Erik Maciejewski <mr.emacski@gmail.com>  Sat, 16 Oct 2021 09:07:25 -0700

llvm-toolchain-12 (1:12.0.1-10) unstable; urgency=medium

  * evolve llvm build configuration in rules to leverage the two stage build
    with runtimes support whereby the resulting stage2 (final) compiler is used
    to build the stage2 (final) runtimes as part of a single monolithic build
  * the stage2 runtimes build now includes compiler-rt, libcxx and libcxxabi as
    well as libunwind and openmp where supported. Additionally, legacy
    corresponding standalone build targets are removed from the rules file
  * patch openmp build to include required runtimes as dependencies to build
    targets so they are built first when included as part of a runtimes build
    since openmp can depend on them
  * patch libclc build to set rpath for prepare_builtins build utility to find
    correct stage2 libs at runtime when executed as part of a build
  * patch libcxx build so that if libatomic is found, only link it if libgcc is
    the rtlib
  * patch compiler-rt build to suppress xray and testing warns when not enabled
  * patch llvm linker detection to account for vendor being prepended to lld
    version string
  * remove several existing patches incorporating workarounds no longer required
    by the modified build configuration

  [ Sylvestre Ledru ]
  * If parallel is not set in DEB_BUILD_OPTIONS, use nproc
  * Add source-is-missing llvm/test/* / lldb/test/* / lld/test/*
    to the source override
  * Remove old override 'outdated-autotools-helper-file'

  [ John Paul Adrian Glaubitz ]
  * Disable libunwind on sparc, sparc64 and x32
