@@ -17,6 +17,10 @@ llvm-toolchain-12 (1:12.0.1-11) unstable; urgency=medium
   * d/rules: Add amdgcn-mesa-mesa3d to libclc build.
     Closes: #993904, #995069
 
+  [ Sylvestre Ledru ]
+  * Bring back the llvm manpages (Closes: #995684)
+    Were generated at the wrong place
+
  -- Erik Maciejewski <mr.emacski@gmail.com>  Sat, 16 Oct 2021 09:07:25 -0700
 
 llvm-toolchain-12 (1:12.0.1-10) unstable; urgency=medium
